# Selecao-Qdesign

./: .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml  requirements-colab.txt  test.py
Data/cif_ingestion/: pipeline.py
Data/fasta_ingestion/: pipeline.py
Data/pdf_image_ingestion/: download.py  ingest_qdrant.py  test_qdrant_query.py
Data/pipeline/: README.md  logger.py
Data/pipeline/collectors/: alphafold_collector.py  arxiv_collector.py  base_collector.py
Data/pipeline/embedding/: __init__.py  gemini_embedder.py  sequence_embedder.py  structure_embedder.py  text_embedder.py
Data/pipeline/ingestion/: __init__.py  image_ingester.py  protein_ingester.py  text_ingester.py
Data/pipeline/monitoring/: balance_monitor.py  base_monitor.py
Data/pipeline/scripts/: collect_arxiv_simple.py  collect_arxiv_working.py  download_data.py  process_local_files.py  verify_qdrant.py
Interpretability/: environment.yml  esm2_dim_to_biological_property.json  esm_cif_interpretability.ipynb
backend/Core/: .env.example  package.json
backend/Services/: README.md  test_knowledge_service.py  validate_config.py
docs/: XQdrant_README.md  backend_core_README.md  backend_services_coscientist_server_README.md  backend_services_retrieval_service_README.md  data_README.md  interpretability_README.md  ui_README.md
ui/: .gitignore  README.md  package.json  pnpm-workspace.yaml
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/hooks/: index.ts  useSocket.ts
ui/lib/: api.ts  socket.tsx  stores.ts  types.ts  utils.ts
ui/server/: socket.ts
(+286 files in other folders)
