[project]
name = "selecao-qdesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "esm>=3.2.3",
    "fastembed>=0.7.4",
    "numpy>=2.4.1",
    "pdfplumber>=0.11.9",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "tqdm>=4.67.1",
]
